# aoc2025

./: Cargo.toml  README.md  justfile
aoc-benchmarking/: Cargo.toml
aoc-benchmarking/benches/: bench_main.rs
aoc-benchmarking/src/: helper_macros.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: cli.rs  fast_cli.rs  main.rs
aoc-plumbing/: Cargo.toml
aoc-plumbing/src/: problem.rs
ci/: build-task.yaml
ci/scripts/: build.sh
day-001-secret-entrance/: Cargo.toml  README.md
day-001-secret-entrance/src/: lib.rs
day-002-gift-shop/: Cargo.toml  README.md
day-002-gift-shop/src/: lib.rs
day-003-lobby/: Cargo.toml  README.md
day-003-lobby/src/: lib.rs
day-004-printing-department/: Cargo.toml  README.md
day-004-printing-department/src/: lib.rs
day-005-cafeteria/: README.md
day-005-cafeteria/cafeteria/: Cargo.toml
day-005-cafeteria/cafeteria/src/: lib.rs
day-005-cafeteria/src/: lib.rs
day-006-trash-compactor/: Cargo.toml  README.md
day-006-trash-compactor/src/: lib.rs
day-007-laboratories/: Cargo.toml  README.md
day-007-laboratories/src/: lib.rs
day-008-playground/: Cargo.toml  README.md
day-008-playground/src/: lib.rs
day-009-movie-theater/: Cargo.toml  README.md
day-009-movie-theater/src/: lib.rs
day-010-factory/: Cargo.toml  README.md
day-010-factory/src/: lib.rs
day-011-reactor/: Cargo.toml  README.md
day-011-reactor/src/: lib.rs
day-012-christmas-tree-farm/: Cargo.toml  README.md
day-012-christmas-tree-farm/src/: lib.rs
scripts/: new.sh
template/: Cargo.toml
