[workspace]
resolver = "2"
members = [
    "aoc-benchmarking",
    "aoc-cli",
    "aoc-plumbing",
    "day-*",
]

exclude = ["template"]

[workspace.dependencies]
aoc-std = { version = "0.5", registry = "ancalagon" }
anyhow = "1"
itertools = "0.14.0"
nom = { version = "7.1", features = ["alloc"] }
num = "0.4.3"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"

[profile.release]
lto = true

[profile.release-ci]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
incremental = false
panic = "abort"
