[package]
name = "aoc-benchmarking"
version = "0.1.0"
edition = "2024"
description = "Wrapper for having benchmarks in a single place."

[[bench]]
name = "bench_main"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["csv_output"] }

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
secret-entrance = { path = "../day-001-secret-entrance" }
gift-shop = { path = "../day-002-gift-shop" }
