[package]
name = "aoc-benchmarking"
version = "0.1.0"
edition = "2024"
description = "Wrapper for having benchmarks in a single place."

[[bench]]
name = "bench_main"
harness = false

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["csv_output"] }

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
secret-entrance = { path = "../day-001-secret-entrance" }
gift-shop = { path = "../day-002-gift-shop" }
lobby = { path = "../day-003-lobby" }
printing-department = { path = "../day-004-printing-department" }
cafeteria = { path = "../day-005-cafeteria" }
trash-compactor = { path = "../day-006-trash-compactor" }
laboratories = { path = "../day-007-laboratories" }
playground = { path = "../day-008-playground" }
movie-theater = { path = "../day-009-movie-theater" }
factory = { path = "../day-010-factory" }
reactor = { path = "../day-011-reactor" }
christmas-tree-farm = { path = "../day-012-christmas-tree-farm" }
