[package]
name = "aoc-cli"
version = "0.12.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2024"
description = "A command line interface for executing Advent of Code solutions."

[[bin]]
name = "aoc"
path = "src/main.rs"

[features]
default = []
lite = []

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"

[dependencies]
aoc-plumbing = { path = "../aoc-plumbing" }
anyhow = { workspace = true }
clap = { version = "4", features = ["cargo", "env", "derive", "wrap_help"] }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
secret-entrance = { path = "../day-001-secret-entrance" }
gift-shop = { path = "../day-002-gift-shop" }
lobby = { path = "../day-003-lobby" }
printing-department = { path = "../day-004-printing-department" }
cafeteria = { path = "../day-005-cafeteria" }
trash-compactor = { path = "../day-006-trash-compactor" }
laboratories = { path = "../day-007-laboratories" }
playground = { path = "../day-008-playground" }
movie-theater = { path = "../day-009-movie-theater" }
factory = { path = "../day-010-factory" }
reactor = { path = "../day-011-reactor" }
christmas-tree-farm = { path = "../day-012-christmas-tree-farm" }
